styles.css
/*# Front-end Style Guide

## Layout

The designs were created to the following widths:

- Mobile: 375px
- Desktop: 1440px

## Colors

### Primary

- Light red: hsl(0, 100%, 67%)
- Orangey yellow: hsl(39, 100%, 56%)
- Green teal: hsl(166, 100%, 37%)
- Cobalt blue: hsl(234, 85%, 45%)

## Gradients

- Light slate blue (background): hsl(252, 100%, 67%)
- Light royal blue (background): hsl(241, 81%, 54%)

- Violet blue (circle): hsla(256, 72%, 46%, 1)
- Persian blue (circle): hsla(241, 72%, 46%, 0)



### Neutral

- White: hsl(0, 0%, 100%)
- Pale blue: hsl(221, 100%, 96%)
- Light lavender: hsl(241, 100%, 89%)
- Dark gray blue: hsl(224, 30%, 27%)

### Notes

Use transparency to get the colour variations necessary to match the design. Hint: look into using `hsla()`.

## Typography

### Body Copy

- Font size (paragraphs): 18px

### Font

- Family: [Hanken Grotesk](https://fonts.google.com/specimen/Hanken+Grotesk)
- Weights: 500, 700, 800*/

:root {


--Light-red: hsl(0, 100%, 67%);
--Orangey-yellow: hsl(39, 100%, 56%);
--Green-teal: hsl(166, 100%, 37%);
--Cobalt-blue: hsl(234, 85%, 45%);

--Light-slate-blue-bg: hsl(252, 100%, 67%);
--Light-royal-blue-bg: hsl(241, 81%, 54%);

--Violet-blue-circle: hsla(256, 72%, 46%, 1);
--Persian-blue-circle: hsla(241, 72%, 46%, 0);

--White: hsl(0, 0%, 100%);
--Pale-blue: hsl(221, 100%, 96%);
--Light-lavender: hsl(241, 100%, 89%);
--Dark-gray-blue: hsl(224, 30%, 27%);
}

* {
    font-family: 'Hanken Grotesk', serif;
    padding: 0;
    margin: 0;
    box-sizing:  border-box;
}

body {

    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    background-color: var(--Pale-blue);

}

h1 {
    font-size: 17px;
    color: var(--Light-lavender);
    padding: 10 0 0 0;
    margin: 5% 0 10% 0;
}

.results {
    
    border-radius: 25px;
    background: linear-gradient(to bottom,hsl(252, 100%, 67%), hsl(241, 81%, 54%));
    padding: 20px;
    width: 230px;
    height: 100%;
    text-align: center;
    color: white;
    float: left;
        
}

.circle {
    background: linear-gradient(to bottom, hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
    height: 130px;
    width: 130px;
    border-radius: 50%;
    display: inline-block;
}

.your-final {
    font-size: 3rem;
    padding: 0 0 0 0;
    margin: 20% 0 0 0;
    font-weight: 700;

}

.maximal-score {
    font-size: 0.7rem;
    padding: 0 0 0 0;
    margin: 0% 0 0 0;
    color: var(--Light-lavender);
    font-weight: 700;
}

h2 {
    margin: 0.9rem 0 0.8rem 0;
    font-size: 1.4rem;
}

p.final-text {

    font-size: 11px;
    color: var(--Light-lavender);
    font-weight: 500;
    align-content: justify;  
    vertical-align: middle;  
    padding: 0 1rem 1rem;
   
}

.detailed-results {
    float: right;
    padding-left: 1.5rem;
    padding-top: 1.5rem;
    padding-bottom: 3rem;
    width: 250px;
    border-radius: 25px;
    background-color: hsla(0, 0%, 100%, 0.3);
    background: linear-gradient(to bottom, hsla(0, 0%, 100%, 0.2), hsla(0, 0%, 100%, 0.9));;

}

h3.summary {
    padding-bottom: 15px;
    color:hsl(224, 30%, 27%, 0.9);

}

.all-skills{
    display: flex;
    width: 90%;
    flex-direction: column;
    gap: 0.6rem;
    font-size: 10px;

}

.skill {
    display: flex;
    padding: 0.7rem 0.7rem;
    font-size: 10x;
    align-items: center;
    border-radius: 7px;
    justify-content: space-between;
}


img {
    height: 14px;
}

.withicon {
    display: flex;
    gap: 0.5rem;
    font-weight: 700;
    font-size: 13px;
    display: flex;
    align-items: center;
}

.reaction {
    background-color: hsla(0, 100%, 67%, 0.1);
}

div.reaction > div > p:first-of-type {
    color: hsla(0, 100%, 67%, 0.6);

}

.memory {
    background-color: hsla(39, 100%, 56%, 0.15);
}

div.memory > div > p:first-of-type {
    color: hsla(39, 100%, 56%, 0.6);

}

.verbal {
    background-color: hsla(166, 100%, 37%, 0.1);
}

div.verbal > div > p:first-of-type {
    color: hsla(166, 100%, 37%, 0.9);

}

.visual {
    background-color: hsla(234, 85%, 45%, 0.1);
    margin-bottom: 1rem;
}

div.visual > div > p:first-of-type {
    color: hsla(234, 85%, 45%, 0.9);

}

div.skill > p {
    display: flex;
    gap: 0.3rem;
    font-size: 13px;
    color:hsl(224, 30%, 27%, 0.5);
    font-weight: 800;
}

div.skill > p > b {
    color:hsl(224, 30%, 27%, 0.9);
}

button {
    align-content: justify;  
    align-items: center;
    border-radius: 1.5rem;
    margin-top: auto;
    padding: 0.5rem;
    background-color: var(--Dark-gray-blue);
    color: white;
    font-weight: 700;
    cursor: pointer;

}

